# python-project-lvl2

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonci.yml
gendiff/: __init__.py  build_diff.py  constants.py  generate_diff.py  parsers.py  utils.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff_json.py  test_diff_json_before_after.py  test_diff_json_yaml.py  test_diff_yaml json.py  test_diff_yaml.py  test_diff_yaml_json.py
tests/fixtures/: diff_file1_file2.json
